--- a/packages/effectBuilder/package.json
+++ b/packages/effectBuilder/package.json
@@ -18,8 +18,6 @@
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
-    "@jest/transform": "^29.7.0",
-    "@swc/core": "^1.11.5",
-    "@swc/jest": "^0.2.37"
+    "@jest/transform": "^29.7.0"
   }
 }
