--- a/packages/effectBuilder/package.json
+++ b/packages/effectBuilder/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@test-battle/battle": "workspace:^",
     "@test-battle/const": "workspace:^",
-    "@test-battle/data-repository": "workspace:^"
+    "@test-battle/data-repository": "workspace:^",
+    "nanoid": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
