--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@test-battle/battle": "workspace:^",
+    "@test-battle/client": "workspace:^",
     "@test-battle/console": "workspace:^",
     "@test-battle/data-repository": "workspace:^",
     "@test-battle/interface": "workspace:^",
