--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@test-battle/battle": "workspace:^",
     "@test-battle/client": "workspace:^",
     "@test-battle/console": "workspace:^",
+    "@test-battle/const": "workspace:^",
     "@test-battle/data-repository": "workspace:^",
     "@test-battle/interface": "workspace:^",
     "@test-battle/local-adapter": "workspace:^",
@@ -35,16 +36,19 @@
     "@types/node": "^22.13.4",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "bun-types": "^1.2.2",
+    "esbuild": "^0.25.1",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-vue": "^9.32.0",
     "jest": "^29.7.0",
     "prettier": "3.5.1",
+    "quicktype": "^23.0.171",
     "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1"
+    "typescript-eslint": "^8.24.1",
+    "typescript-json-schema": "^0.65.1"
   },
   "workspaces": [
     "packages/*"
