--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "generate": "pnpm --filter @test-battle/schema run generate",
+    "generate:csbind": "tsx packages/csbind/script/generate.ts",
     "cli": "tsx ./bin/cli.ts",
     "web:dev": "pnpm --filter @test-battle/web-ui run dev"
   },
@@ -43,6 +44,7 @@
     "jest": "^29.7.0",
     "prettier": "3.5.1",
     "quicktype": "^23.0.171",
+    "quicktype-core": "^23.0.171",
     "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
     "tsx": "^4.19.3",
