--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "commander": "^13.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "i18next": "^24.2.3",
     "pino": "^9.6.0",
     "socket.io": "^4.8.1",
     "ts-morph": "^25.0.1",
