--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -12,9 +12,15 @@
   "dependencies": {
     "@test-battle/battle": "workspace:^",
     "@test-battle/const": "workspace:^",
-    "@test-battle/interface": "workspace:^"
+    "@test-battle/interface": "workspace:^",
+    "i18next": "^24.2.3",
+    "i18next-chained-backend": "^4.6.2",
+    "i18next-fs-backend": "^2.6.0",
+    "marked": "^15.0.7",
+    "marked-terminal": "^7.3.0"
   },
   "devDependencies": {
+    "@types/marked-terminal": "^6.1.1",
     "@types/node": "^22.12.0"
   }
 }
