--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "pnpm --filter \"./packages/**\" run build",
     "generate": "pnpm --filter @test-battle/schema run generate",
     "generate:csbind": "tsx packages/csbind/script/generate.ts",
     "cli": "tsx ./bin/cli.ts",
@@ -51,7 +52,8 @@
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1",
-    "typescript-json-schema": "^0.65.1"
+    "typescript-json-schema": "^0.65.1",
+    "undici-types": "^7.5.0"
   },
   "workspaces": [
     "packages/*"
