--- a/packages/effectBuilder/tsconfig.json
+++ b/packages/effectBuilder/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "target": "ESNext",
     "moduleResolution": "bundler",
-    "outDir": "../../dist/effectBuilder",
+    "outDir": "./dist/",
     "verbatimModuleSyntax": true,
     "declaration": true,
     "declarationMap": true,
@@ -14,6 +14,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*", "./type-metadata.json", "./test"],
-  "exclude": ["./node_modules"]
+  "include": ["./*", "./type-metadata.json"],
+  "exclude": ["./node_modules", "./dist", "./test"]
 }
