--- a/packages/interface/tsconfig.json
+++ b/packages/interface/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["ESNext", "DOM"],
     "module": "ESNext",
     "target": "ESNext",
-    "outDir": "../../dist/interface",
+    "outDir": "./dist/",
     "verbatimModuleSyntax": true,
     "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true,
@@ -12,5 +12,5 @@
     "types": []
   },
   "include": ["./*"],
-  "exclude": ["./node_modules"]
+  "exclude": ["./node_modules", "./dist"]
 }
