--- a/packages/interface/tsconfig.json
+++ b/packages/interface/tsconfig.json
@@ -8,6 +8,8 @@
     "verbatimModuleSyntax": true,
     "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "declarationMap": true,
     "strict": true,
     "types": []
   },
