--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "verbatimModuleSyntax": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "declaration": true,
+    "declarationMap": true,
     "types": ["node"]
   },
   "include": ["bin"],
