--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -7,7 +7,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "pnpm run build:code && pnpm run build:types",
-    "build:code": "esbuild index.ts --bundle --format=esm --outdir=dist --external:./node_modules/*",
+    "clean": "rm -rf dist",
+    "build:code": "esbuild index.ts --bundle --format=esm --platform=node --outdir=dist --external:./node_modules/*",
     "build:types": "tsc --emitDeclarationOnly"
   },
   "keywords": [],
