--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,7 @@
   "name": "@test-battle/server",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
