--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,12 @@
     "build:code": "esbuild index.ts --bundle --format=esm --outdir=dist --external:./node_modules/*",
     "build:types": "tsc --emitDeclarationOnly"
   },
+  "exports": {
+    ".": {
+      "import": "./index.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "keywords": [],
   "author": "yuuinih",
   "license": "MIT",
