--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -11,7 +11,7 @@
     "strict": true,
     "declaration": true,
     "declarationMap": true,
-    "types": []
+    "types": ["node"]
   },
   "include": ["./*"],
   "exclude": ["./node_modules", "./dist"]
