--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -12,6 +12,6 @@
     "types": ["node"],
     "composite": true
   },
-  "include": ["./*"],
+  "include": ["./src/**/*"],
   "exclude": ["./node_modules", "./dist"]
 }
