--- a/packages/battle/tsconfig.json
+++ b/packages/battle/tsconfig.json
@@ -13,6 +13,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*"],
+  "include": ["./src/**/*"],
   "exclude": ["./node_modules", "./dist"]
 }
