--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -13,6 +13,6 @@
     "declarationMap": true,
     "types": ["node"]
   },
-  "include": ["./*"],
+  "include": ["./src/**/*"],
   "exclude": ["./node_modules", "./dist"]
 }
