--- a/packages/const/tsconfig.json
+++ b/packages/const/tsconfig.json
@@ -11,6 +11,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*"],
+  "include": ["./src/**/*"],
   "exclude": ["./node_modules", "./dist"]
 }
