--- a/packages/dataRepository/tsconfig.json
+++ b/packages/dataRepository/tsconfig.json
@@ -14,6 +14,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./dataRepository.ts", "./index.ts"],
+  "include": ["./src/**/*"],
   "exclude": ["./node_modules", "./dist"]
 }
