--- a/packages/localAdapter/tsconfig.json
+++ b/packages/localAdapter/tsconfig.json
@@ -12,6 +12,6 @@
     "declarationMap": true,
     "strict": true
   },
-  "include": ["./*"],
+  "include": ["./src/**/*"],
   "exclude": ["./node_modules", "./dist"]
 }
