--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -3,6 +3,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
+    "composite": true,
     "lib": ["ESNext"],
     "module": "ESNext",
     "moduleResolution": "bundler",
