--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -6,6 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/src/index.d.ts",
   "scripts": {
+    "generate": "tsx script/schema.ts",
     "build": "pnpm run build:code && pnpm run build:types",
     "clean": "rm -rf dist",
     "build:code": "esbuild index.ts --bundle --format=esm --outdir=dist --external:./node_modules/*",
