--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -9,7 +9,7 @@
     "generate": "tsx script/schema.ts",
     "build": "pnpm run build:code && pnpm run build:types",
     "clean": "rm -rf dist",
-    "build:code": "esbuild index.ts --bundle --format=esm --outdir=dist --external:./node_modules/*",
+    "build:code": "esbuild index.ts --bundle --format=esm --outdir=dist --allow-overwrite --external:./node_modules/*",
     "build:types": "tsc --emitDeclarationOnly"
   },
   "keywords": [],
