--- a/packages/const/package.json
+++ b/packages/const/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "pnpm run build:code && pnpm run build:types",
     "clean": "rm -rf dist",
-    "build:code": "esbuild index.ts --bundle --format=esm --outdir=dist --external:./node_modules/*",
+    "build:code": "esbuild index.ts --bundle --format=esm --outdir=dist --allow-overwrite --external:./node_modules/*",
     "build:types": "tsc --emitDeclarationOnly --preserveSymlinks --skipLibCheck"
   },
   "author": "yuuinih",
