--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YuuinIH/test_battle.git"
+  },
   "main": "./dist/index.js",
   "types": "./dist/src/index.d.ts",
   "scripts": {
