--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "private": true,
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YuuinIH/test_battle.git"
+  },
   "main": "./dist/index.js",
   "types": "./dist/src/index.d.ts",
   "scripts": {
