--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,7 @@ jobs:
           node-version: 23
           registry-url: 'https://npm.pkg.github.com'
           cache: 'pnpm'
-          scope: '@yuuinih'
+          scope: '@test-battle'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
