--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -20,20 +20,22 @@
   },
   "dependencies": {
     "@anatine/zod-mock": "^3.13.5",
-    "@comfyorg/litegraph": "^0.9.3",
+    "@comfyorg/litegraph": "^0.9.9",
     "@element-plus/icons-vue": "^2.3.1",
-    "@faker-js/faker": "^9.5.0",
+    "@faker-js/faker": "^9.6.0",
     "@test-battle/client": "workspace:^",
     "@test-battle/const": "workspace:^",
     "@test-battle/parser": "workspace:^",
     "@test-battle/protocol": "workspace:^",
     "@test-battle/schema": "workspace:^",
-    "@types/lodash": "^4.17.15",
-    "@vueuse/core": "^12.7.0",
-    "axios": "^1.8.1",
-    "element-plus": "^2.9.4",
+    "@types/lodash": "^4.17.16",
+    "@vueuse/core": "^12.8.2",
+    "axios": "^1.8.4",
+    "element-plus": "^2.9.7",
+    "i18next": "^24.2.3",
+    "i18next-vue": "^5.2.0",
     "lodash": "^4.17.21",
-    "nanoid": "^5.0.9",
+    "nanoid": "^5.1.5",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
@@ -44,24 +46,25 @@
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.1.2",
-    "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.13.4",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@tsconfig/node22": "^22.0.1",
+    "@types/node": "^22.13.13",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.4.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.20.1",
-    "eslint-plugin-oxlint": "^0.15.10",
-    "eslint-plugin-vue": "^9.32.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-oxlint": "^0.15.15",
+    "eslint-plugin-vue": "^9.33.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
-    "oxlint": "^0.15.10",
-    "prettier": "^3.5.1",
+    "oxlint": "^0.15.15",
+    "prettier": "^3.5.3",
     "typescript": "~5.7.3",
-    "unplugin-auto-import": "^19.1.0",
-    "unplugin-vue-components": "^28.4.0",
-    "vite": "^6.1.0",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
+    "vite": "^6.2.3",
+    "vite-plugin-static-copy": "^2.3.0",
     "vite-plugin-vue-devtools": "^7.7.2",
-    "vue-tsc": "^2.2.2"
+    "vue-tsc": "^2.2.8"
   }
 }
